# thai-voice-dictation

./: README.md  demo.py  generate_test_audio.py  main.py  pyproject.toml  record_thai.py  test.sh  thai_config.py  thai_model_test.py  thai_processor.py  transcribe.py
docs/: DESIGN.md
